--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <div class="container">
-        
+        <h1>Memory game</h1>
+        <div first_row>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
 
     </div>
 
