first row created in htm

--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 <body>
     <div class="container">
         <h1>Memory game</h1>
-        <div first_row>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        
+        <div class="row">
+            <div class="pattern">
+              <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+            <div class="pattern">
+                <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+              </div>
+              <div class="pattern">
+                <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+              </div>
+              <div class="pattern">
+                <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+              </div>
+          </div>
 
     </div>
 
