first row modifyed

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         
         <div class="row">
             <div class="pattern">
-              <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+              <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
             </div>
-            <div class="pattern">
-                <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+           <div class="pattern">
+                <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
               </div>
               <div class="pattern">
-                <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+                <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
               </div>
               <div class="pattern">
-                <img src="img/pattern.png" alt="it is the colorful pattern of the game" >
+                <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
               </div>
           </div>
 
