row structures inserted

--- a/index.html
+++ b/index.html
@@ -10,22 +10,59 @@
 <body>
     <div class="container">
         <h1>Memory game</h1>
-        
+        <!--Images first row-->
         <div class="row">
             <div class="pattern">
               <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
             </div>
-           <div class="pattern">
+            <div class="pattern">
                 <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
-              </div>
-              <div class="pattern">
+            </div>
+            <div class="pattern">
                 <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
-              </div>
-              <div class="pattern">
+            </div>
+            <div class="pattern">
                 <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
-              </div>
+            </div>
+          </div>
+        <!--/Images first row-->
+
+        <!--Images second row-->
+
+        <div class="row">
+            <div class="pattern">
+              <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+            <div class="pattern">
+                <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+            <div class="pattern">
+                <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+            <div class="pattern">
+                <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
           </div>
 
+        <!--/Images second row-->
+
+        <!--Images third row-->
+        <div class="row">
+           
+            <div class="pattern">
+              <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+            <div class="pattern">
+                <img class="carta" src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+            <div class="pattern">
+                <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+            <div class="pattern">
+                <img class="carta"src="img/pattern.png" alt="it is the colorful pattern of the game" >
+            </div>
+          </div>
+        <!--/Images third row-->
     </div>
 
 
