--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           </div>
         <!--/Images first row-->
 
-        <!--Images second row-->
+        
+            <!--Images second row-->
 
         <div class="row">
             <div class="pattern">
@@ -63,6 +64,10 @@
             </div>
           </div>
         <!--/Images third row-->
+    
+        <footer>
+           <h2>From team Boolean</h2> 
+        </footer>
     </div>
 
 
