--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <div class="row clearfix">
             <div class="pattern">
               <img class="carta" src="img/noun_Bicycle_3134821.png" alt="bicycle" >
-              <div class="writting">bicycle</div>
+              <div class="writting bike">Bicycle</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Submarine_3134738.png" alt="submarine" >
+                <div class="writting submarine">Submarine</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_air_balloon_3134741.png" alt="Air_balloon" >
+                <div class="writting air_balloon">Air Balloon</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Bicycle_3134821.png" alt="Bicycle" >
+                <div class="writting bike">bicycle</div>
             </div>
           </div>
         <!--/Images first row-->
@@ -35,15 +38,19 @@
         <div class="row clearfix">
             <div class="pattern">
               <img class="carta" src="img/noun_Cruise_Ship_3134824.png" alt="Cruise" >
+              <div class="writting cruise">Cruise Ship</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_air_balloon_3134741.png" alt="Air_balloon" >
+                <div class="writting air_balloon">Air Balloon</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Submarine_3134738.png" alt="Submarine" >
+                <div class="writting submarine">Submarine</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Tractor_3134797.png" alt="Tractor" >
+                <div class="writting tractor">Tractor</div>
             </div>
           </div>
 
@@ -52,15 +59,19 @@
            
             <div class="pattern">
               <img class="carta" src="img/noun_Tram_3134750.png" alt="Tram" >
+              <div class="writting tram">Tram</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Cruise_Ship_3134824.png" alt="Cruise" >
+                <div class="writting cruise">Cruise Ship</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Tractor_3134797.png" alt="Tractor" >
+                <div class="writting tractor">Tractor</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Tram_3134750.png" alt="Tram" >
+                <div class="writting tram">Tram</div>
             </div>
           </div>
         
