working on the writting on img

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row clearfix">
             <div class="pattern">
               <img class="carta" src="img/noun_Bicycle_3134821.png" alt="bicycle" >
-              <div class="writting bike">Bicycle</div>
+              <div class="writting bike">bicycle</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Submarine_3134738.png" alt="submarine" >
