--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!--first row-->
         <div class="row clearfix">
             <div class="pattern">
-              <img class="carta" src="img/noun_Bicycle_3134821.png" alt="bicycle" >
-              <div class="writting bike">bicycle</div>
+                <img class="carta" src="img/noun_Bicycle_3134821.png" alt="Bicycle" >
+                <div class="writting bike">bicycle</div>
             </div>
             <div class="pattern">
                 <img class="carta" src="img/noun_Submarine_3134738.png" alt="submarine" >
